--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     "react/": "https://aistudiocdn.com/react@^19.1.1/",
     "react": "https://aistudiocdn.com/react@^19.1.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
-    "@supabase/supabase-js": "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.44.4/+esm"
+    "@supabase/supabase-js": "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.44.4/+esm",
+    "moment": "https://cdn.jsdelivr.net/npm/moment@2.30.1/+esm",
+    "moment-jalaali": "https://cdn.jsdelivr.net/npm/moment-jalaali@0.10.0/+esm"
   }
 }
 </script>
