--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
     "@supabase/supabase-js": "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.44.4/+esm",
     "moment": "https://cdn.jsdelivr.net/npm/moment@2.30.1/+esm",
-    "moment-jalaali": "https://cdn.jsdelivr.net/npm/moment-jalaali@0.10.0/+esm"
+    "moment-jalaali": "https://cdn.jsdelivr.net/npm/moment-jalaali@0.10.0/+esm",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.19.0"
   }
 }
 </script>
