--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>سامانه مدیریت وظایف</title>
   <link rel="icon" type="image/png" sizes="32x32" href="https://parspmi.ir/uploads/e73337ca3f094bdfb441a21737534965.png">
   <link rel="apple-touch-icon" href="https://parspmi.ir/uploads/e73337ca3f094bdfb441a21737534965.png">
